Bug 24724 - X crashes in uxa_acquire_pattern when logging in (gdm)
Summary: X crashes in uxa_acquire_pattern when logging in (gdm)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2009-10-25 10:29 UTC by Albert Damen
Modified: 2009-10-26 11:39 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log (16.81 KB, text/plain)
2009-10-25 10:29 UTC, Albert Damen
no flags Details
stacktrace (3.28 KB, text/plain)
2009-10-25 10:30 UTC, Albert Damen
no flags Details
Proposed fix (802 bytes, patch)
2009-10-25 10:31 UTC, Albert Damen
no flags Details | Splinter Review

Description Albert Damen 2009-10-25 10:29:58 UTC
Created attachment 30672 [details]
Xorg.log

Bug description: When I log in from GDM, X frequently crashes and the GDM login screen is shown again. It only happens with compiz enabled.

System environment:
-- chipset: GM965
-- system architecture: 32-bit
-- xf86-video-intel: git-master, commit 38ab403d7a1c461
-- xserver: 1.7.1
-- mesa: 7.7-devel, commit a74e53ddba246b1
-- libdrm: 2.4.15
-- kernel: 2.6.31-14-generic (based on 2.6.31.4)
-- Linux distribution: Ubuntu Karmic
-- Machine or mobo model: Compal IFL91
-- Display connector: LVDS

Reproducing steps: Log in from GDM with compiz enabled and see the login screen appear again (50% chance).

Additional info: see stacktrace and patch.
The bug is triggered by gtk-window-decorator, which calls XRenderComposite with height=-1, but height is an unsigned int. Therefore -intel tries to create a pixmap with height=65535, which is not supported.
Comment 1 Albert Damen 2009-10-25 10:30:42 UTC
Created attachment 30673 [details]
stacktrace
Comment 2 Albert Damen 2009-10-25 10:31:07 UTC
Created attachment 30674 [details] [review]
Proposed fix
Comment 3 Gordon Jin 2009-10-25 18:24:40 UTC
Thanks for the patch. Let Carl review.
Comment 4 Carl Worth 2009-10-26 11:39:12 UTC
Thanks very much for the patch, Albert.

I've pushed this out to xf86-video-intel git master.

-Carl

PS. Would still be worth chasing down that -1 and fixing it. :-)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.