Fix crash in uxa_acquire_pattern when pDst is NULL

This avoids a crash when an XRenderComposite call is made with a
-1 value for width/height, (which apparently compiz's gtk-window-
decorator likes to do). Fixes bug:

	X crashes in uxa_acquire_pattern when logging in (gdm)
	http://bugs.freedesktop.org/show_bug.cgi?id=24724

Signed-off-by: Albert Damen <albrt@gmx.net>
Reviewed-by: Carl Worth <cworth@cworth.org>